<resources>
    <string name="app_name">Fast Access</string>
    <string name="linear_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.LinearManager</string>
    <string name="grid_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.GridManager</string>
    <string name="staggered_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.StaggeredManager</string>
    <string name="scroll_behavior" translatable="false">@string/appbar_scrolling_view_behavior</string>
    <string name="in_progress">In Progress, Please Wait…</string>
    <string name="action">Action</string>
    <string name="settings">Settings</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="no_data">No Data.</string>
    <string name="search">Search</string>
    <string name="no_apps">No Applications</string>
    <string name="write_sdcard_explanation">This permission is needed to save your FA Icon/Image to your device storage.</string>
    <string name="select_all">Select All</string>
    <string name="general_settings">General Settings</string>
    <string name="app_version">Application Version</string>
    <string name="libs">Open Source Libraries</string>
    <string name="open_source">Check FA source code</string>
    <string name="your_fav_apps_are_always_a_click_ahead">Your fav apps are always a click away.</string>
    <string name="get_themes">Get Theme Packs</string>
    <string name="no_icon_packs">No Theme Packs Found.</string>
    <string name="choose_theme_pack">Choose Theme Pack</string>
    <string name="default_theme">Default</string>
    <string name="not_support_icon_theme">Icon Pack is not supported</string>
    <string name="my_apps">My Apps</string>
    <string name="device_apps">Device Apps</string>
    <string name="selected">Selected</string>
    <string name="edit">Edit</string>
    <string name="no_folders">No folders yet, click on + button to start adding folders</string>
    <string name="save">Save</string>
    <string name="folder_name">Folder Name</string>
    <string name="required_field">Required</string>
    <string name="apps">Apps</string>
    <string name="delete">Delete</string>
    <string name="color_picker_hint_folder">Click here to change the folder color</string>
    <string name="select_apps">Select Apps</string>
    <string name="add_all">Add All</string>
    <string name="remove_all">Remove All</string>
    <string name="click_to_open_fa">Click to open FA</string>
    <string name="click_to_start_service">Click here to start FA service</string>
    <string name="about">About</string>
    <string name="background_summery">Background color of FA apps list.</string>
    <string name="background_title">FA Apps Background</string>
    <string name="floating_mode_title">FA Floating Mode</string>
    <string name="floating_mode_summary">Select FA floating mode.</string>
    <string name="auto_save_position_summary">Auto save last position of FA floating icon.</string>
    <string name="sticky_title">Sticky FA Floating Icon</string>
    <string name="sticky_summary">Keep FA floating icon attached to screen edges.</string>
    <string name="fa_visibility_summary">Keep FA floating apps always showing.</string>
    <string name="fa_visibility_title">FA Floating App Visibility</string>
    <string name="status_bar_summary">Make the status bar icon transparent</string>
    <string name="status_bar_title">Status Bar Icon</string>
    <string name="semi_transparent_summary">Make FA floating icon semi-transparent when is not touched.</string>
    <string name="semi_transparent_title">Semi-Transparent FA Floating Icon</string>
    <string name="auto_trans_summary">Change the transparency value of FA Floating icon.</string>
    <string name="auto_trans_title">FA Floating Icon Transparency</string>
    <string name="background_transparency_summary">Adjust FA apps background transparency</string>
    <string name="background_transparency_title">FA App Background Transparency</string>
    <string name="theme_pack_summary">Choose icons theme pack.</string>
    <string name="theme_pack_title">Icons Theme Pack</string>
    <string name="custom_icon_summary">Choose custom icon to use as FA floating icon</string>
    <string name="custom_icon_title">Custom FA Icon</string>
    <string name="fa_customization">FA Apps Customization</string>
    <string name="fa_icon_customization">FA Icon Customization</string>
    <string name="icon_size_title">Predefined FA Floating Icon Size</string>
    <string name="icon_size_summary">Choose from predefined icon sizes.</string>
    <string name="choose_icon_size">Choose Icon Size</string>
    <string name="manual_size_title">Custom FA Floating Icon Size</string>
    <string name="manual_size_summary">Manually choose the size that fits you.</string>
    <string name="choose_icon_gap">Choose Icon Gap</string>
    <string name="icons_gaps_summary">Choose from predefined icon gaps.</string>
    <string name="icons_gaps_title">FA Floating Icons Gap</string>
    <string name="auto_start_title">Auto Start FA</string>
    <string name="auto_start_summary">Auto start FA when device is rebooted.</string>
    <string name="fa_orientation_title">FA Orientation Mode</string>
    <string name="fa_orientation_summary">Choose FA orientation mode to display horizontally.</string>
    <string name="required_restart">Requires FA service to be restarted.\nLongPress FA icon to restart from notification bar.</string>
    <string name="change_transparency">Change Transparency</string>
    <string name="value">Value</string>
    <string name="change_size">Change Icon Size</string>
    <string name="folders">Folders</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="floating_window_warning">Please enable FA as floating window to be able to use FA.</string>
    <string name="back">Back</string>
    <string name="from_icon_pack">From Icon Pack</string>
    <string name="from_gallery">From Gallery</string>
    <string name="error_retrieving_icon">Icon Pack does not support sending icons to other apps, please use different icon pack.</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="crop_image">Crop Image.</string>
    <string name="no_apps_selected">No Apps Selected, Select ones from Device Apps Tab.</string>
    <string name="no_apps_selected_floating">No Apps Selected, Please switch to Folders Mode from settings screen if you have any folder created
        .</string>
    <string name="no_folders_floating">No Folders Created, Please switch to Apps Mode from settings screen if you have any apps selected.</string>
    <string name="mode_not_available">FA Folder Mode Not Available</string>
    <string name="folder_mode">FA Folder Mode</string>
    <string name="app_mode">FA App Mode</string>
    <string name="backup_restore">Across Devices Backup &amp; Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="sign_in_title"><![CDATA[Sign-In to backup/restore your\n FA settings & data across devices]]></string>
    <string name="sign_in_with_google">Sign-In with Google+</string>
    <string name="failed_login">Failed Sign-In</string>
    <string name="successfully_backup"><![CDATA[Successfully Backup, now you can restore all your data & settings from any device.]]></string>
    <string name="login_first_msg">You must Sign-In first</string>
    <string name="backup_in_progress">Backup in progress, Please wai…</string>
    <string name="successfully_restored">Successfully Restored, App restart is required</string>
    <string name="restore_in_progress">Restore in progress, Please wait…</string>
    <string name="no_data_to_restore">No data to restore, please backup first.</string>
    <string name="ok">@android:string/ok</string>
    <string name="backup_warning">This will overwrite any existing backup you have made so far.\nAre you sure?</string>
    <string name="restore_warning">Restoring will overwrite all your settings and data within the app.\nAre you sure?</string>
    <string name="edit_folder_hint">Click here to edit the folder.</string>
    <string name="delete_folder_hint">Click here to delete the folder, once deleted can\'t be recovered unless if you made previous backup.</string>
    <string name="add_folder_apps_hint">Click here to add apps to this folder.</string>
    <string name="delete_folder_confirm_msg">This action can not be undo.\nAre you sure?</string>
    <string name="share_my_backup">Share My Backup</string>
    <string name="no_user">Please login first.</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="sharing_backup">Hello there!, I\'m sharing my FA backup with you.</string>
    <string name="restore_function_not_available">Restore functionality is not available</string>
    <string name="click_here_html">Click here to restore my FA backup.</string>
    <string name="drag_and_drop_hint"><![CDATA[Drag & Drop to sort the selected apps.\n Single click to select to delete from the trash
    icon displayed in toolbar.]]></string>
    <string name="single_click_to_select_hint">Start selecting apps by clicking on any app.</string>
    <string name="about_me">About Me</string>
    <string name="email_us">Email Us</string>
    <string name="email_subject">[App] Fast Access (Floating Toolbox)</string>
    <string name="choose_email">Choose email</string>
    <string name="failed_to_open_gplus">Can not open google plus.</string>
    <string name="failed_to_open_github">Can not open Github page</string>
    <string name="follow_me_in">Follow Me In:</string>
    <string name="hi_i_m_kosh">Hi, I\'m Kosh</string>
    <string name="whats_new">What\'s New</string>
    <string name="version_name">Version:</string>
    <string name="rate_fa">Rate Fast Access</string>
    <string name="whats_new_point_1">(New) Revamping of FA from the ground to make it more faster and efficient.</string>
    <string name="whats_new_point_2"><![CDATA[(New) Now you can Backup & Restore your data from any device.]]></string>
    <string name="whats_new_point_3"><![CDATA[(New) Design that makes it easy & friendly to use FA]]></string>
    <string name="whats_new_point_4">(NEW) Folders mode, now you can categorize your apps under folders.</string>
    <string name="whats_new_point_5"><![CDATA[(NEW)App shortcuts support for Android Nougat & supported launchers.]]></string>
    <string name="whats_new_point_6">FA is an open source app, you can check the source code from the settings screen.</string>
    <string name="auto_save_position_title">Auto Save Last Position</string>
    <string name="intro_one_title">Selecting Apps Actions</string>
    <string name="intro_one_desc">Upon selecting apps, you get two options:\nSelect All &amp; Add All</string>
    <string name="intro_folder_title">Creating Folder</string>
    <string name="intro_folder_desc"><![CDATA[You can customize the folder background by clicking on the colored circle & give a unique name to your folder.]]></string>
    <string name="intro_two_title">Selected Apps Actions</string>
    <string name="intro_two_desc">Single click on a selected app will give you two options:\nSelect All &amp; Remove Selected App</string>
    <string name="intro_three_title"><![CDATA[Drag & Drop]]></string>
    <string name="intro_three_desc">Long press on a selected app to change its position.</string>
    <string name="intro_screen">Intro Screen</string>
    <string name="folder_exists">Folder Exists</string>
    <string name="folder_exists_msg">There is a folder exists with the name you entered, please use different name to create new folder.</string>
    <string name="intro_four_title">FA Floating Modes</string>
</resources>