<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myApps"
            android:checked="true"
            android:icon="@drawable/ic_apps_drawer"
            android:title="@string/device_apps"/>

        <item
            android:id="@+id/folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/folders"/>
        <item
            android:id="@+id/selectedApps"
            android:icon="@drawable/ic_selected_apps"
            android:title="@string/my_apps"/>
    </group>

    <item android:title="@string/backup_restore">
        <menu>
            <item
                android:id="@+id/backup"
                android:icon="@drawable/ic_backup"
                android:title="@string/backup"/>
            <item
                android:id="@+id/restore"
                android:icon="@drawable/ic_restore"
                android:title="@string/restore"/>
        </menu>
    </item>

    <item android:title="@string/action">

        <menu>
            <item
                android:id="@+id/start"
                android:icon="@drawable/ic_play"
                android:title="@string/start_service"/>
            <item
                android:id="@+id/stop"
                android:icon="@drawable/ic_stop"
                android:title="@string/stop_service"/>

            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        </menu>

    </item>

</menu>